[package]
edition = "2021"
name = "tool"
version = "0.1.0"

[dependencies]
crossterm = {version = "0.28.1", features = ["event-stream"]}
ratatui = "0.29.0"
serde = {version = "1.0.216", features = ["derive"]}
serde_json = "1.0.133"
tokio = {version = "1.42.0", features = ["full"]}
tokio-stream = {version = "0.1.17", features = ["io-util"]}
